[gd_scene load_steps=4 format=3 uid="uid://cescapemenu001"]

[ext_resource type="Script" path="res://scripts/ui/escape_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 25
content_margin_top = 20
content_margin_right = 25
content_margin_bottom = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.2, 0.25, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="EscapeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "GAME MENU"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Settings"

[node name="Separator2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="SignOutButton" type="Button" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Sign Out"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Quit Game"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false
